# semmety

./: .gitignore  Makefile  flake.nix  meson.build
src/: SemmetyEventManager.cpp  SemmetyEventManager.hpp  SemmetyFrame.cpp  SemmetyFrame.hpp  SemmetyFrameUtils.cpp  SemmetyFrameUtils.hpp  SemmetyLayout.cpp  SemmetyLayout.hpp  SemmetyLayoutHooks.cpp  SemmetyLayoutHypr.cpp  SemmetyWorkspaceWrapper.cpp  SemmetyWorkspaceWrapper.hpp  dispatchers.cpp  globals.hpp  json.hpp  log.hpp  main.cpp  utils.cpp  utils.hpp
